--- a/src/common/backend/catalog/builtin_funcs.ini
+++ b/src/common/backend/catalog/builtin_funcs.ini
@@ -9690,6 +9690,10 @@ AddFuncGroup(
         AddBuiltinFunc(_0(3985), _1("pv_total_memory_detail"), _2(0), _3(true), _4(true), _5(pv_total_memory_detail), _6(2249), _7(PG_CATALOG_NAMESPACE), _8(BOOTSTRAP_SUPERUSERID), _9(INTERNALlanguageId), _10(1), _11(1000), _12(0), _13(0), _14(false), _15(false), _16(false), _17(false), _18('v'), _19(0), _20(0), _21(3, 25, 25, 23), _22(3, 'o', 'o', 'o'), _23(3, "nodename", "memorytype", "memorymbytes"), _24(NULL), _25("pv_total_memory_detail"), _26(NULL), _27(NULL), _28(NULL), _29(0), _30(false), _31(NULL), _32(false), _33(NULL), _34('f'), _35(NULL),  _36(0), _37(false), _38(NULL), _39(NULL), _40(0))
     ),
     AddFuncGroup(
+        "python_udf", 1,
+        AddBuiltinFunc(_0(7000), _1("python_udf"), _2(2), _3(true), _4(false), _5(python_udf), _6(23), _7(PG_CATALOG_NAMESPACE), _8(BOOTSTRAP_SUPERUSERID), _9(INTERNALlanguageId), _10(1), _11(0), _12(0), _13(0), _14(false), _15(false), _16(false), _17(false), _18('i'), _19(0), _20(2,23,23), _21(NULL), _22(NULL), _23(NULL), _24(NULL), _25("python_udf"), _26(NULL), _27(NULL), _28(NULL), _29(0), _30(false), _31(NULL), _32(false), _33(NULL), _34('f'), _35(NULL), _36(0), _37(false), _38(NULL), _39(NULL), _40(0))
+    ),
+    AddFuncGroup(
         "query_to_xml", 1, 
         AddBuiltinFunc(_0(2924), _1("query_to_xml"), _2(4), _3(false), _4(false), _5(query_to_xml), _6(142), _7(PG_CATALOG_NAMESPACE), _8(BOOTSTRAP_SUPERUSERID), _9(INTERNALlanguageId), _10(100), _11(0), _12(0), _13(0), _14(false), _15(false), _16(false), _17(false), _18('s'), _19(0), _20(4, 25, 16, 16, 25), _21(NULL), _22(NULL), _23(4, "query", "nulls", "tableforest", "targetns"), _24(NULL), _25("query_to_xml"), _26(NULL), _27(NULL), _28(NULL), _29(0), _30(false), _31(NULL), _32(false), _33("map query result to XML"), _34('f'), _35(NULL),  _36(0), _37(false), _38(NULL), _39(NULL), _40(0))
     ),
